--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #ffffff;
+  background-color: #E8EDED;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: rgb(0, 0, 0);
+  color: white;
 }
 
 .App-link {
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.container{
+  display: flex;
+  align-content: space-evenly;
+  justify-content: space-evenly;
+  
+  flex-wrap: wrap;
+  flex: 0 1;
+  gap: 1em;
+}
+
+.container img{
+  flex: 1 0 auto;
+  max-width: 100%;
+  width: fit-content;
+  height: auto;
+  max-height : 320px;
+  min-height: 240px;
+}
+
+
